generate robots and instruments entities

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -15,11 +15,12 @@
     "enableHibernateCache": false,
     "enableSwaggerCodegen": "true",
     "enableTranslation": true,
-    "entities": [],
+    "entities": ["Instrument", "Robot"],
     "gitCompany": "",
     "jhiPrefix": "jhi",
     "jhipsterVersion": "8.1.0",
     "languages": ["en", "ru"],
+    "lastLiquibaseTimestamp": 1708854883000,
     "messageBroker": false,
     "nativeLanguage": "en",
     "packageFolder": "ru/ani/scan",
