--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-vue": "8.7.1",
     "flush-promises": "1.0.2",
-    "generator-jhipster": "8.1.0",
+    "generator-jhipster": "^8.1.0",
     "happy-dom": "12.10.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
@@ -137,7 +137,7 @@
     "sinon": "17.0.1",
     "swagger-ui-dist": "5.10.3",
     "typescript": "5.3.3",
-    "vite": "5.0.7",
+    "vite": "^5.1.4",
     "vitest": "1.0.4",
     "vitest-sonar-reporter": "1.0.0",
     "wait-on": "7.2.0"
