--- a/package.json
+++ b/package.json
@@ -94,12 +94,14 @@
     "dayjs": "1.11.10",
     "deepmerge": "4.3.1",
     "js-cookie": "3.0.5",
+    "moment": "^2.30.1",
     "pinia": "2.1.7",
     "rxjs": "7.4.0",
-    "sockjs-client": "1.5.2",
+    "sockjs-client": "^1.5.2",
     "vue": "3.3.11",
     "vue-i18n": "9.8.0",
-    "vue-router": "4.2.5"
+    "vue-router": "4.2.5",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@pinia/testing": "0.1.3",
@@ -121,7 +123,7 @@
     "eslint-plugin-prettier": "5.0.1",
     "eslint-plugin-vue": "8.7.1",
     "flush-promises": "1.0.2",
-    "generator-jhipster": "^8.1.0",
+    "generator-jhipster": "^1.10.2",
     "happy-dom": "12.10.3",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
