--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@vuelidate/core": "2.0.3",
     "@vuelidate/validators": "2.0.4",
     "@vueuse/core": "10.7.0",
+    "ag-grid-vue3": "^31.1.1",
     "axios": "1.6.2",
     "bootstrap": "4.6.2",
     "bootstrap-vue": "2.23.1",
